--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -6783,6 +6783,9 @@ h5 a {
   color: #58585a;
   font-weight: bold;
 }
+.strong-background {
+  background-color: #786586;
+}
 .breadcrumb {
   padding-left: 0px;
   padding-right: 0px;
@@ -6829,7 +6832,7 @@ h5 a {
   display: block;
   text-align: right;
   font-size: 1em;
-  margin-top: 20px;
+  margin-top: 15px;
 }
 .more-link a:before {
   content: '>';
@@ -6845,7 +6848,7 @@ a.more-link {
   display: block;
   text-align: right;
   font-size: 1em;
-  margin-top: 0.5em;
+  margin-top: 15px;
 }
 a.more-link:before {
   content: '>';
@@ -7045,12 +7048,46 @@ a.more-link:before {
   color: #ffffff;
   text-align: left;
 }
+#block-system-main .panels-flexible-row-new-16 .view-display-id-block a.more-link {
+  text-align: left;
+}
+#block-system-main .panels-flexible-row-new-16 .view-display-id-block a.show-less {
+  text-align: right !important;
+  width: 20px;
+  height: 12px;
+  float: right;
+  overflow: hidden;
+  font-style: normal;
+}
+#block-system-main .panels-flexible-row-new-16 .view-display-id-block a.show-less:before {
+  content: "\e253";
+  font-family: "Glyphicons Halflings";
+  font-size: 1.2em;
+  line-height: 0;
+}
 #block-system-main .panels-flexible-row-new-16 .view-display-id-block_1 .views-item-columns-container {
   background-color: #ffffff;
   padding: 15px;
 }
 #block-system-main .panels-flexible-row-new-16 .view-display-id-block_1 .views-item-columns-container a {
   display: block;
+}
+#block-system-main .panels-flexible-row-new-16 .view-display-id-block_1 .views-item-columns-container a.show-less {
+  text-align: right !important;
+  width: 20px;
+  height: 12px;
+  float: right;
+  overflow: hidden;
+  font-style: normal;
+  position: relative;
+  top: -5px;
+  margin-top: 0px;
+}
+#block-system-main .panels-flexible-row-new-16 .view-display-id-block_1 .views-item-columns-container a.show-less:before {
+  content: "\e253";
+  font-family: "Glyphicons Halflings";
+  font-size: 1.2em;
+  line-height: 0;
 }
 #block-system-main .panels-flexible-row-new-16 .view-display-id-block_1 .views-item-columns-container .field-name-related-partners .node-partner {
   background-color: #786586;
@@ -7077,6 +7114,9 @@ a.more-link:before {
 /*END HOME*/
 /*ESTILOS ARTICLES
 ****************************************************************/
+.node-type-article h2 {
+  font-size: 3em;
+}
 .node-type-article .view-all-url {
   border-top: 2px solid #ffffff;
   text-align: right;
@@ -7366,9 +7406,26 @@ a.more-link:before {
 .page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .field-name-title-field {
   font-size: 1.4em;
 }
-.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool a.more-link {
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .field-name-tools-see-more {
+  margin-left: 207px;
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .field-name-tools-see-more a.more-link {
   text-align: left;
   margin-top: 15px;
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .field-name-tools-see-more a.show-less {
+  text-align: right !important;
+  width: 20px;
+  height: 12px;
+  float: right;
+  overflow: hidden;
+  font-style: normal;
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .field-name-tools-see-more a.show-less:before {
+  content: "\e253";
+  font-family: "Glyphicons Halflings";
+  font-size: 1.2em;
+  line-height: 0;
 }
 .page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .field-name-field-tool-link a {
   color: #58585a;
@@ -7393,6 +7450,21 @@ a.more-link:before {
 }
 .page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .field-name-related-partners .node-partner .more-link {
   color: #ffffff;
+  text-align: left;
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .related-partners-1 > div {
+  margin-left: 222px;
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .related-partners-2 > div {
+  display: table;
+  border-collapse: collapse;
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .related-partners-2 > div > .even:first-child,
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .related-partners-2 > div > .odd:first-child {
+  display: table-cell;
+}
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .related-partners-2 > div > .even:first-child {
+  border-right: 10px solid white;
 }
 /*END OIRA TOOLS*/
 /*FAQ'S
@@ -7514,6 +7586,94 @@ h1 {
   float: left;
   margin-right: 30px;
   margin-bottom: 20px;
+}
+/*END OIRA NEWS*/
+/*COUNTRIES LIST
+*********************************************************/
+.page-countries h1 {
+  color: #58585a;
+}
+.page-countries .pane-oira-country-oira-country-count-all .pane-content {
+  display: table;
+  width: 100%;
+  margin-top: 25px;
+}
+.page-countries .pane-oira-country-oira-country-count-all .pane-content .country-content-count-label {
+  display: table-cell;
+  color: #ffffff;
+  text-align: center;
+  border-left: 2px solid #ffffff;
+  width: 20%;
+}
+.page-countries .pane-oira-country-oira-country-count-all .pane-content .country-content-count-label:last-child {
+  border-right: 2px solid #ffffff;
+}
+.page-countries .pane-oira-country-oira-country-count-all .pane-content .country-content-count-label .form-group {
+  margin-bottom: 0px;
+}
+.page-countries .pane-oira-country-oira-country-count-all .pane-content .country-content-count-label .form-item label {
+  display: block;
+  font-size: 1.2em;
+  margin-bottom: 0px;
+}
+.page-countries .pane-oira-country-oira-country-count-all .pane-content .country-content-count-label .form-item span {
+  display: block;
+  font-size: 2.8em;
+  font-weight: bold;
+  line-height: 31px;
+  margin-top: 15px;
+}
+.page-countries .view-id-countries {
+  margin-top: 30px;
+}
+.page-countries .view-id-countries .views-item-columns-container {
+  background-color: #dfd8e4;
+  overflow: auto;
+  margin-bottom: 30px;
+}
+.page-countries .view-id-countries .views-item-columns-container .views-field-field-flag {
+  margin: 30px 30px 0px 30px;
+}
+.page-countries .view-id-countries .views-item-columns-container .views-field-field-flag img {
+  max-height: 67px;
+}
+.page-countries .view-id-countries .views-item-columns-container .views-field-name-field {
+  margin: 30px 30px 30px 30px;
+}
+.page-countries .view-id-countries .views-item-columns-container .views-field-name-field h2 a {
+  color: #58585a;
+  font-family: "Roboto";
+  font-weight: bold;
+}
+.page-countries .view-id-countries .views-item-columns-container .views-field-country-content-count {
+  margin: 0px 30px 30px 30px;
+}
+.page-countries .view-id-countries .views-item-columns-container .views-field-country-content-count .form-group {
+  margin-bottom: 0px;
+}
+.page-countries .view-id-countries .views-item-columns-container .views-field-country-content-count .field-content {
+  display: table;
+  width: 100%;
+  text-align: center;
+}
+.page-countries .view-id-countries .views-item-columns-container .views-field-country-content-count .field-content .country-content-count-label {
+  display: table-cell;
+  width: 33%;
+}
+.page-countries .view-id-countries .views-item-columns-container .views-field-country-content-count .field-content .country-content-count-label label {
+  display: block;
+  font-weight: normal;
+}
+.page-countries .view-id-countries .views-item-columns-container .views-field-country-content-count .field-content .country-content-count-label span {
+  display: block;
+  font-weight: bold;
+  font-size: 1.8em;
+}
+.page-countries .view-id-countries .views-item-columns-container .views-field-country-content-count .field-content .country-content-count-label:first-child {
+  border-right: 2px solid #58585a;
+}
+.page-countries .view-id-countries .views-item-columns-container .views-field-country-content-count .field-content .country-content-count-label:last-child {
+  border-left: 2px solid #58585a;
 }
 /*FOOTER
 ********************************************/
