--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -22,6 +22,7 @@ h1{
 	font-family: @font-family-base-2;
 	font-size: 2.6em;
 	border-bottom: none !important;
+	color: @color-text-purple-darker;
 }
 
 h2{
@@ -97,6 +98,14 @@ h5{
 			color: @color-text-grey;
 			font-weight: normal;
 			font-style: normal;
+		}
+	}
+	.first.last{
+		font-style: italic;
+		color: @color-see-more;
+		a{
+			font-style: italic;
+			color: @color-see-more;
 		}
 	}
 	/*
@@ -659,7 +668,7 @@ a.more-link{
 	.pane-node-body{
 		.field-type-text-with-summary{
 			font-family: @font-family-base-2;
-			font-size: 1.6em;
+			font-size: 1.4em;
 			margin-bottom: 30px;
 		}
 	}
@@ -1003,9 +1012,6 @@ a.more-link{
 
 /*OIRA NEWS
 *************************************************************/
-h1{
-	color: @color-text-purple-darker;
-}
 .view-display-id-oshnews_list{
 	font-size: 16px;
 	.views-row-odd{
@@ -1013,14 +1019,21 @@ h1{
 	}
 	article{
 		padding-top: 30px;
-    	padding-bottom: 30px; 
-    	.title_field{
+    	padding-bottom: 30px;
+    	.field-type-datetime{
+			margin-bottom: 0px;
+    	}
+    	.field-name-title-field{
     		margin-bottom: 15px;
-    		a{
-    			font-size: 1.4em;
-    			color: @color-text-grey;
-    			font-weight: bold;
-    		}
+    		h2{
+				margin-top: 5px;
+	    		a{
+	    			font-size: .7em;
+	    			color: @color-text-grey;
+	    			font-weight: bold;
+	    			font-family: "Roboto";
+	    		}
+	    	}
     	}
     	.field-name-field-summary{
     		margin-bottom: 15px;
@@ -1044,6 +1057,9 @@ h1{
 /*News detail
 *****************************************************/
 .node-news{
+	.field-name-field-publication-date{
+		margin-top: 50px;
+	}
 	h1{
 		color: @color-text-grey;
 		margin-bottom: 30px;
@@ -1056,7 +1072,7 @@ h1{
 		}
 	}
 	.field-name-body{
-		margin-bottom: 15px;
+		margin-bottom: 30px;
 		a{
 			color: @color-text-purple-darker;
 		}
@@ -1170,3 +1186,320 @@ h1{
 		}
 	}
 }
+
+/*PROMOTIONAL MATERIALS
+********************************************************************/
+
+//introduction
+.page-promotional-materials{
+	.pane-node-body{
+		.field-type-text-with-summary {
+		    font-family: 'Oswald';
+		    font-size: 1.4em;
+		    margin-bottom: 30px;
+		}
+	}
+	.panels-flexible-row-new-1{
+		background-color: @color-primary;
+		padding-top: 30px;
+		padding-bottom: 30px;
+		.views-item-columns-container{
+			margin-bottom: 15px;
+			background-color: rgba(0,0,0,0);
+			.views-field-name-field{
+				a{
+					color: @color-primary-dark;
+					font-size: @font-size1-6;
+					border-bottom: 2px solid @color-primary-dark;
+					margin-bottom: 20px;
+					padding-bottom: 5px;
+					font-family: "Oswald";
+				}
+			}
+			.views-field-field-image{
+				img{
+					//min-height: 234px;//testing
+				}
+			}
+			.views-field-description-field{
+    			padding-top: 15px;
+    			//font-size: 14px;//testing
+			}
+		}
+	}
+}
+
+//search
+.page-promotional-materials-search{
+	h1{
+		color: @color-text-purple-darker;
+	}
+	.pane-node-body{
+		.field-type-text-with-summary{
+			font-family: @font-family-base-2;
+			font-size: 1.4em;
+			margin-bottom: 30px;
+		}
+	}
+	.panels-flexible-row-new-1{
+		background: url('../images/background-two-colors.png') repeat-y 50%;
+		padding-bottom: 0px;
+		padding-top: 0px;
+		#oira-promotional-material-search-form{
+			div:first-child{
+			    .form-group{
+			    	margin-bottom: 0px;
+			    }
+			    #edit-left-column{
+					background-color: @color-primary-dark;
+					color: @color-white;
+					padding-right: 30px;
+					padding-top: 30px;
+					position: relative;
+					.form-type-textfield{
+						float: left;
+						margin-bottom: 15px;
+						input{
+							border: none;
+							border-radius: 0px;
+							outline: none;
+							height: auto;
+							padding-right: 35px;
+						}
+
+					}
+					#edit-submit{
+						position: absolute;
+						right: 0;
+						margin-right: 30px;
+						color: @color-text-purple-darker;
+					    border: none;
+					    border-radius: 0px;
+					    outline: none;
+					    width: 35px;
+					    line-height: 19px;
+    					font-size: 1.2em;
+    					padding-left: 7px;
+    					overflow: hidden;
+    					background-color: rgba(0,0,0,0);
+						&:before{
+							content: "\e003";
+							font-family: "Glyphicons Halflings";
+							margin-right: 30px;
+						}
+					}
+					a.active{
+						display: block;
+						color: @color-white;
+						margin-bottom: 10px;
+						font-style: italic;
+						span{
+							&:before{
+								color: @color-text-purple-darker;
+							    padding: 1px;
+							    font-size: 0.7em;
+							    margin-right: 10px;
+							    background-color: @color-white;
+							    display: block;
+							    width: 13px;
+							    height: 13px;
+							}
+						}
+					}
+					#edit-field-country, #edit-field-languagevalue, #edit-field-sector{
+						label{
+							&:after{
+								content: none;
+							}
+						}
+					}
+					.form-type-checkboxes{
+						border-top: 2px solid @color-white;
+						padding-top: 10px;
+						clear: both;
+						margin-top: 15px;
+
+						input.form-checkbox{
+							display: none;
+						}
+						label{
+							padding-left: 0px;
+							margin-bottom: 0px;
+							&:first-child{
+								font-family: @font-family-base-2;
+								font-size: @font-size1-2;
+								font-weight: normal;
+								display: block;
+								margin-bottom: 10px;
+								cursor: pointer;
+							}
+							&:after{
+								content: "\e250";
+								font-family: "Glyphicons Halflings";
+								margin-left: 10px;
+							}
+						}
+						.area-shown{
+							&:after{
+								content: "\e252";
+								font-family: "Glyphicons Halflings";
+								margin-left: 10px;
+							}
+						}
+
+					}
+					.form-item-field-sector{
+						border-bottom: 2px solid @color-white;
+					}
+				}
+
+				#edit-content{
+					background-color: @color-primary;
+					padding-bottom: 50px;
+					padding-left: 30px;
+					padding-top: 30px;
+					border-left: 5px solid @color-white;
+					#edit-sort-fieldset{
+						border: none;
+						border-radius: 0px;
+						background-color: rgba(0,0,0,0);
+						box-shadow: none;
+						border-top: 2px solid @color-text-purple-darker;
+						border-bottom: 2px solid @color-text-purple-darker;
+						margin-bottom: 30px;
+						.panel-body{
+							padding-left: 0px;
+							padding-right: 0px;
+						}
+						.sort-container{
+							min-width: 210px;
+							padding-left: 0px;
+							label{
+								font-weight: 100;
+								font-size: @font-size0-9;
+								&:after{
+									content: ": ";
+								}
+							}
+							#edit-sort{
+								font-size: @font-size0-9;
+								display: inline-block;
+							    width: auto;
+							    padding: 0;
+							    border: none;
+							    padding-bottom: 1px;
+							    font-weight: bold;
+							    height: initial;
+							    background-color: rgba(0,0,0,0);
+							}
+						}
+						.count-container{
+							font-size: @font-size0-9;
+						}
+					}
+					.search-page-results-wrapper{
+						background-color: @color-white;
+						padding: 30px;
+						.node-practical-tool{
+							border-top: 2px solid @color-primary-dark;
+							padding:30px 0px;
+							margin-right: 0px;
+							margin-left: 0px;
+							.col-sm-3{
+								padding-left: 0px;
+							}
+							.field-name-title-field{
+								font-size: @font-size1-4;
+							}
+							.field-name-tools-see-more{
+								margin-left: 207px;
+								a.more-link{
+									text-align: left;
+									margin-top: 15px;
+								}
+								a.show-less{
+									text-align: right !important;
+									width: 20px;
+    								height: 12px;
+								    float: right;
+								    overflow: hidden;
+								    font-style: normal;
+									&:before{
+										content: "\e253";
+										font-family: "Glyphicons Halflings";
+										font-size: 1.2em;
+    									line-height: 0;
+									}
+								}
+							}
+							.field-name-field-tool-link{
+								a{
+									color: @color-text-grey;
+								    font-weight: bold;
+								    margin-top: 30px;
+								    display: block;
+								    margin-bottom: 15px;
+									span.glyphicon-new-window{
+										color: @color-see-more;
+										margin-left: 10px;
+									}
+								}
+							}
+							/*
+							//partners inside oira tools
+							.field-name-related-partners{
+								.node-partner{
+									background-color: @color-primary-dark;
+    								padding: 15px;
+    								color: @color-white;
+    								h4{
+    									a{
+    										font-size: 1.2em;
+    										color: @color-white;
+    										margin-top: 0px;
+    									}
+    								}
+    								.more-link{
+    									color: @color-white;
+    									text-align: left;
+    								}
+    							}
+							}
+							.related-partners-1 > div{
+								margin-left: 222px;
+							}
+							.related-partners-2 > div{
+								display: table;
+								border-collapse: collapse;
+								& > .even, & > .odd{
+									&:first-child{
+										display: table-cell;
+									}
+								}
+								& > .even:first-child{
+									border-right: 10px solid white;
+								}
+							}*/
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+/*END Promotional materials*/
+
+/*NATIONAL SOCIAL PARTNERS
+*************************************************************/
+
+.page-national-social-partners{
+	h1{
+		color: @color-text-grey;
+	}
+	.pane-node-body{
+		font-weight: bold;
+	}
+}
+
+/*END National social partners*/
