--- a/docroot/sites/all/themes/oira_frontend/css/override.css
+++ b/docroot/sites/all/themes/oira_frontend/css/override.css
@@ -17,3 +17,14 @@
     max-width: 80rem;
     margin: 0 auto;
 }
+
+
+ul.nav > li.dropdown {
+    vertical-align: bottom;
+}
+ul.nav > li.dropdown:hover ul.dropdown-menu {
+    display: block;
+}
+ul.nav li.dropdown ul.dropdown-menu {
+    margin-top: 0;
+}
