--- a/docroot/sites/all/themes/oira_frontend/bootstrap/less/navs.less
+++ b/docroot/sites/all/themes/oira_frontend/bootstrap/less/navs.less
@@ -23,7 +23,7 @@
       &:hover,
       &:focus {
         text-decoration: none;
-        background-color: @nav-link-hover-bg;
+        //background-color: @nav-link-hover-bg;
       }
     }
 
@@ -33,9 +33,9 @@
 
       &:hover,
       &:focus {
-        color: @nav-disabled-link-hover-color;
+        //color: @nav-disabled-link-hover-color;
         text-decoration: none;
-        background-color: transparent;
+        //background-color: transparent;
         cursor: @cursor-disabled;
       }
     }
@@ -131,8 +131,8 @@
       &,
       &:hover,
       &:focus {
-        color: @nav-pills-active-link-hover-color;
-        background-color: @nav-pills-active-link-hover-bg;
+        //color: @nav-pills-active-link-hover-color;
+        //background-color: @nav-pills-active-link-hover-bg;
       }
     }
   }
