--- a/docroot/sites/all/themes/oira_frontend/less/header.less
+++ b/docroot/sites/all/themes/oira_frontend/less/header.less
@@ -196,19 +196,25 @@
     				color: @color-white;
     				background-color: rgba(0,0,0,0);
 	    			//border-right: 2px solid @color-white;
-    				padding-top: 5px;
-    				padding-bottom: 4px;
+    				padding-top: 6px;
+    				padding-bottom: 0px;
     			}
     			.dropdown-menu{
     				background-color: @color-menu;
     				border: none;
-    				top: 35px;
+    				top: 30px;
     				padding: 0px;
+    				padding-top: 10px;
    					border-radius: 0px;
     				li{
     					display: block !important;
     					border-right: none;
     					border-bottom: 2px solid white;
+    					padding-top: 5px;
+    					padding-bottom: 5px;
+    					&:hover{
+							background-color: darken(@color-see-more, 7);
+    					}
     					a{
     						border: none;
     						padding: 5px 15px;
